# acclint

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  ac3d.cpp  ac3d.h  acclint.cpp  acclint.linux.cppcheck  acclint.windows.cppcheck  config.h.in  example.ac  triangleintersects.hpp
.github/workflows/: ci.yml
cmake/: FindASan.cmake
test/: testrunner.sh
test/ambiguous-texture/: test.bats  test1.4.result  test1.5.result  test1.6.result  test1.ac  test1.result
test/blank-line/: test.bats  test1.4.result  test1.5.result  test1.6.result  test1.ac  test1.result
test/collinear-surface-vertices/: test.bats  test1.ac  test1.result  test1.result.ac  test10.ac  test10.result  test11.ac  test11.result  test11.result.ac  test12.ac  test12.result  test12.result.ac  test2.ac  test2.result  test3.ac  test3.result  test3.result.ac  test4.ac  test4.result  test5.ac  test5.result  test6.ac  test6.result  test7.ac  test7.result  test8.ac  test8.result  test9.ac  test9.result
test/convert-ac-to-acc/: test.bats  test1.ac  test1.result.acc  test2.ac  test3.ac  test3.result.acc  test4.ac  test4.result.acc  test5.ac  test5.result.acc  test6.ac  test6.result.acc
test/convert-acc-to-ac/: test.bats  test1.result.ac  test2.acc  test2.result.ac  test3.result.ac  test4.result.ac  test5.result.ac  test6.result.ac  test7.acc  test7.result.ac
test/different-mat/: test.bats  test1.4.result.ac  test1.ac  test1.result
test/different-surf/: test.bats  test1.4.result.ac  test1.ac  test1.result
test/different-uv/: test.bats  test1.ac  test1.result
test/duplicate-materials/: test.bats  test1.5.result  test1.ac  test1.result  test2.5.result  test2.6.result  test2.ac  test2.result
test/duplicate-surface-vertices/: test.bats  test1.ac  test1.result  test2.ac  test2.result  test3.ac  test3.result  test3.result.ac
test/duplicate-surfaces/: test.bats  test1.5.result  test1.6.result  test1.ac  test1.result
test/duplicate-surfaces-order/: test.bats  test1.ac  test1.result  test2.ac  test2.result  test3.result
test/duplicate-surfaces-winding/: test.bats  test1.ac  test1.result  test2.ac  test2.result  test3.ac  test3.result
test/duplicate-texture/: test.bats  test1.5.result  test1.6.result  test1.result
test/flatten/: test.bats  (+12 more)
(+461 files in other folders)
